[package]
name = "cbc-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.23"
hex = "0.4.3"
rand = "0.8"
tui = "0.18"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
