[package]
name = "cbc-repeated-iv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
anyhow = "1.0.57"
cbc = { version = "0.1.2", features = ["alloc"] }
colored = "2.0.0"
rand = "0.8.5"
hex = "0.4.3"
prettytable-rs = "^0.8"
