[package]
name = "crc-as-integrity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
anyhow = "1"
clap = { version = "3.1", features = ["derive"] }
crc = "3.0"
ctr = "0.9"
hex = "0.4"
rand = "0.8"
rustyline = "9.1"
shell-words = "1.1"
yansi = "0.5"
