[package]
name = "ctr-nonce-reuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4.2" }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", branch = "main" }
hex = "0.4.3"
rand = "0.8.5"
aes = "0.8.1"
ctr = { version = "0.9.1" }
