[package]
name = "replay-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.9.4", features = ["alloc"] }
anyhow = "1.0"
crossterm = "0.23"
hex = "0.4.3"
rand = "0.8"
tui = "0.18"
